PP-478: Port openjdk8 config from baseimage-fatjar